--- a/Assignments/Assignment_1.ipynb
+++ b/Assignments/Assignment_1.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 1"
+    "# Assignment 1\n",
+    "\n",
+    "No Assignment\n",
+    "\n"
    ]
   }
  ],
