--- a/Assignments/Assignment_2.ipynb
+++ b/Assignments/Assignment_2.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 2"
+    "# Assignment 2\n",
+    "\n",
+    "No Assignment | MLK Weekend\n"
    ]
   }
  ],
