Udated Assignments Notebooks

--- a/Assignments/Assignment_2.ipynb
+++ b/Assignments/Assignment_2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Assignment 2\n",
     "\n",
-    "No Assignment | MLK Weekend\n"
+    "MLK Weekend | No Class | No Assignement\n"
    ]
   }
  ],
