--- a/Assignments/Assignment.ipynb
+++ b/Assignments/Assignment.ipynb
@@ -57,15 +57,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "video = "
+    "import cv2\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Path to your video file\n",
+    "video_path = \"../Visuals/Main.mp4\"  # Replace with your actual video path\n",
+    "\n",
+    "# Create a VideoCapture object\n",
+    "cap = cv2.VideoCapture(video_path) # 0 is typically the default camera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File exists: ../Visuals/Main.mp4\n",
+      "Video opened successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import cv2\n",
+    "\n",
+    "# Replace this with your actual video path\n",
+    "video_path = \"../Visuals/Main.mp4\"\n",
+    "\n",
+    "# Check if the file exists\n",
+    "if os.path.exists(video_path):\n",
+    "    print(f\"File exists: {video_path}\")\n",
+    "else:\n",
+    "    print(f\"File does not exist: {video_path}\")\n",
+    "    \n",
+    "# Try to open the video\n",
+    "cap = cv2.VideoCapture(video_path)\n",
+    "\n",
+    "# Check if the video was opened successfully\n",
+    "if cap.isOpened():\n",
+    "    print(\"Video opened successfully!\")\n",
+    "else:\n",
+    "    print(\"Failed to open video.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Video dimensions: 640x360\n",
+      "Frames per second: 29.97002997002997\n"
+     ]
+    }
+   ],
+   "source": [
+    "frame_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "frame_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "\n",
+    "print(f\"Video dimensions: {frame_width}x{frame_height}\")\n",
+    "print(f\"Frames per second: {fps}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import clear_output, Image, display\n",
+    "import time\n",
+    "import base64\n",
+    "\n",
+    "def play_video_in_notebook(video_path, max_frames=None):\n",
+    "    cap = cv2.VideoCapture(video_path)\n",
+    "    \n",
+    "    if not cap.isOpened():\n",
+    "        print(\"Error: Could not open video.\")\n",
+    "        return\n",
+    "    \n",
+    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    frame_delay = 1 / fps\n",
+    "    \n",
+    "    frame_count = 0\n",
+    "    \n",
+    "    try:\n",
+    "        while True:\n",
+    "            ret, frame = cap.read()\n",
+    "            \n",
+    "            if not ret:\n",
+    "                print(\"End of video.\")\n",
+    "                break\n",
+    "                \n",
+    "            # Convert frame from BGR (OpenCV format) to RGB\n",
+    "            frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "            \n",
+    "            # Display the frame\n",
+    "            clear_output(wait=True)\n",
+    "            \n",
+    "            # Convert to JPEG for display\n",
+    "            _, buffer = cv2.imencode('.jpg', frame_rgb)\n",
+    "            image_data = base64.b64encode(buffer).decode('utf-8')\n",
+    "            \n",
+    "            # Display the image\n",
+    "            display(Image(data=base64.b64decode(image_data)))\n",
+    "            \n",
+    "            # Wait to maintain the correct frame rate\n",
+    "            time.sleep(frame_delay)\n",
+    "            \n",
+    "            frame_count += 1\n",
+    "            if max_frames is not None and frame_count >= max_frames:\n",
+    "                print(f\"Reached maximum frames ({max_frames}).\")\n",
+    "                break\n",
+    "                \n",
+    "    except KeyboardInterrupt:\n",
+    "        print(\"Playback interrupted.\")\n",
+    "    finally:\n",
+    "        cap.release()\n",
+    "\n",
+    "# Call the function with your video path\n",
+    "# play_video_in_notebook(video_path, max_frames=100)  # Limit to 100 frames for quick testing"
    ]
   },
   {
@@ -97,11 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -142,18 +268,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
